[package]
name = "pdb_wrapper"
version = "0.1.0"
authors = ["jan"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
bindgen = "0.55"

[dependencies]
snafu = "0.6.9"

[dev-dependencies]
pdb = "0.6"