[package]
name = "pdb_wrapper"
version = "0.2.0"
authors = ["jan"]
edition = "2018"
build = "build.rs"
description = "Rust library to create fake PDBs. Very in-dev, API is likely to break a lot (not including the frequent LLVM API breakages...)"
homepage = "https://github.com/not-wlan/pdb_wrapper"
repository = "https://github.com/not-wlan/pdb_wrapper"
license = "Unlicense"

[build-dependencies]
cmake = "0.1.45"
bindgen = "0.55"
which = "4.1.0"

[dependencies]
snafu = "0.6.9"

[dev-dependencies]
pdb = "0.6"

[features]
default = ["llvm_13"]
llvm_10 = []
llvm_13 = []